# ss24-physiological-computing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  graph.h
HRI-PHYSIO-LIB/: .gitignore  CMakeLists.txt
HRI-PHYSIO-LIB/src/stream/: streamer_interface.cpp  streamer_interface.h
HRI-PHYSIO-LIB/src/utilities/: helpers.cpp  helpers.h
HriPhysioLib/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh
HriPhysioLib/cli/: .gitignore  CMakeLists.txt  README.md  build-cli.sh  main.cpp
HriPhysioLib/cli/data/: data_extract.py  ecg_data.csv  ecg_data_with_hilbert.csv
HriPhysioLib/cli/scripts/: .gitignore  README.md  generate_data.py  plot_data.py  requirements.txt
HriPhysioLib/include/HriPhysio/Core/: graph.h
HriPhysioLib/include/HriPhysio/Processing/: math.h
HriPhysioLib/lib/: .gitignore  .gitmodules  CMakeLists.txt  build.sh
HriPhysioLib/lib/src/core/: ring_buffer.h
HriPhysioLib/lib/src/manager/: robot_manager.cpp  robot_manager.h  thread_manager.cpp  thread_manager.h
HriPhysioLib/lib/src/processing/: hilbert_transform.cpp  hilbert_transform.h  math.h  pocketfft.h  spectrogram.cpp  spectrogram.h
HriPhysioLib/lib/src/social/: robot_interface.cpp  robot_interface.h
HriPhysioLib/lib/src/stream/: csv_streamer.cpp  csv_streamer.h  lsl_streamer.cpp  lsl_streamer.h  streamer_factory.cpp  streamer_factory.h  streamer_interface.cpp  streamer_interface.h
HriPhysioLib/lib/src/tests/: CMakeLists.txt  test_ring_buffer.h
HriPhysioLib/lib/src/utilities/: arg_parser.cpp  arg_parser.h  enums.h  helpers.cpp  helpers.h
HriPhysioLib/lib/test/: CMakeLists.txt  hilbert-transform-test.cpp  run-tests.sh
HriPhysioLib/src/core/: ring_buffer.h
HriPhysioLib/src/manager/: robot_manager.cpp  robot_manager.h  thread_manager.cpp  thread_manager.h
HriPhysioLib/src/processing/: hilbert_transform.cpp  hilbert_transform.h  math.h  pocketfft.h  spectrogram.cpp  spectrogram.h
HriPhysioLib/src/social/: robot_interface.cpp  robot_interface.h
HriPhysioLib/src/stream/: csv_streamer.cpp  csv_streamer.h  lsl_streamer.cpp  lsl_streamer.h  streamer_factory.cpp  streamer_factory.h  streamer_interface.cpp  streamer_interface.h
HriPhysioLib/src/utilities/: arg_parser.cpp  arg_parser.h  enums.h  helpers.cpp  helpers.h
